--- a/index.html
+++ b/index.html
@@ -148,6 +148,31 @@
       </div>
     </div>
   </section>
+  <section class="agricult">
+    <div class="agrocult-bg">
+      <div class="agricult-left"></div>
+    <div class="agricult-right">
+      <img src="./images/icons/img/agricult-bg.png" alt="agricult-bg">
+    </div>
+    </div>
+    <div class="container agrocult-content">
+      <div class="agrocult-text">
+        <h2>MODERN AGRICULTURE</h2>
+        <h3>Providing High Quality
+          Products</h3>
+          <ul>
+            <li>
+              <h4>Our Agriculture Growth</h4>
+              <p>Lorem ipsum dolor sit amet consectetur. Cursus purus at tempus arcu. Metus elit auctor</p>
+            </li>
+            <li>
+              <h4>Making Healthy Foods</h4>
+              <p>Lorem ipsum dolor sit amet consectetur. Cursus purus at tempus arcu. Metus elit auctor interdum scelerisque</p>
+            </li>
+          </ul>
+      </div>
+    </div>
+  </section>
     </div>
 </body>
 </html>
