--- a/index.html
+++ b/index.html
@@ -148,6 +148,102 @@
       </div>
     </div>
   </section>
+  <div class="container">
+  <section class="reviews">
+    <h2>Our Testimonials</h2>
+    <h3>WHAT THEY’RE TAKING ABOUT</h3>
+    <div class="reviews-slider">
+      <div class="reviews-items">
+        <div class="review">
+          <div class="review-img">
+            <img src="" alt="">
+          </div>
+          <div class="review-text">
+            <p>
+              “Lorem ipsum dolor sit amet consectetur. Tortor tempus cursus leo dictumst elementum. Sagittis elit turpis dignissim turpis tristique venenatis. Tempor id commodo odio nunc id volutpat libero. Ut hendrerit malesuada netus sapien dictum sapien nibh. Cras laoreet risus mus mi commodo volutpat quis neque. Scelerisque at in in id donec ornare velit. Posuere amet lobortis volutpat purus mauris. Tortor magna non turpis ultricies iaculis rhoncus. Volutpat lectus proin pellentesque platea.”
+            </p>
+            <p>
+              <b>Tyrese Gibson</b>
+              <span>Customer</span>
+            </p>
+          </div>
+        </div>
+        <div class="review">
+          <div class="review-img">
+            <img src="" alt="">
+          </div>
+          <div class="review-text">
+            <p>
+              “Lorem ipsum dolor sit amet consectetur. Tortor tempus cursus leo dictumst elementum. Sagittis elit turpis dignissim turpis tristique venenatis. Tempor id commodo odio nunc id volutpat libero. Ut hendrerit malesuada netus sapien dictum sapien nibh. Cras laoreet risus mus mi commodo volutpat quis neque. Scelerisque at in in id donec ornare velit. Posuere amet lobortis volutpat purus mauris. Tortor magna non turpis ultricies iaculis rhoncus. Volutpat lectus proin pellentesque platea.”
+            </p>
+            <p>
+              <b>Tyrese Gibson</b>
+              <span>Customer</span>
+            </p>
+          </div>
+        </div>
+        <div class="review">
+          <div class="review-img">
+            <img src="" alt="">
+          </div>
+          <div class="review-text">
+            <p>
+              “Lorem ipsum dolor sit amet consectetur. Tortor tempus cursus leo dictumst elementum. Sagittis elit turpis dignissim turpis tristique venenatis. Tempor id commodo odio nunc id volutpat libero. Ut hendrerit malesuada netus sapien dictum sapien nibh. Cras laoreet risus mus mi commodo volutpat quis neque. Scelerisque at in in id donec ornare velit. Posuere amet lobortis volutpat purus mauris. Tortor magna non turpis ultricies iaculis rhoncus. Volutpat lectus proin pellentesque platea.”
+            </p>
+            <p>
+              <b>Tyrese Gibson</b>
+              <span>Customer</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="reviews-items">
+        <div class="review">
+          <div class="review-img">
+            <img src="" alt="">
+          </div>
+          <div class="review-text">
+            <p>
+              “Lorem ipsum dolor sit amet consectetur. Tortor tempus cursus leo dictumst elementum. Sagittis elit turpis dignissim turpis tristique venenatis. Tempor id commodo odio nunc id volutpat libero. Ut hendrerit malesuada netus sapien dictum sapien nibh. Cras laoreet risus mus mi commodo volutpat quis neque. Scelerisque at in in id donec ornare velit. Posuere amet lobortis volutpat purus mauris. Tortor magna non turpis ultricies iaculis rhoncus. Volutpat lectus proin pellentesque platea.”
+            </p>
+            <p>
+              <b>Tyrese Gibson</b>
+              <span>Customer</span>
+            </p>
+          </div>
+        </div>
+        <div class="review">
+          <div class="review-img">
+            <img src="" alt="">
+          </div>
+          <div class="review-text">
+            <p>
+              “Lorem ipsum dolor sit amet consectetur. Tortor tempus cursus leo dictumst elementum. Sagittis elit turpis dignissim turpis tristique venenatis. Tempor id commodo odio nunc id volutpat libero. Ut hendrerit malesuada netus sapien dictum sapien nibh. Cras laoreet risus mus mi commodo volutpat quis neque. Scelerisque at in in id donec ornare velit. Posuere amet lobortis volutpat purus mauris. Tortor magna non turpis ultricies iaculis rhoncus. Volutpat lectus proin pellentesque platea.”
+            </p>
+            <p>
+              <b>Tyrese Gibson</b>
+              <span>Customer</span>
+            </p>
+          </div>
+        </div>
+        <div class="review">
+          <div class="review-img">
+            <img src="" alt="">
+          </div>
+          <div class="review-text">
+            <p>
+              “Lorem ipsum dolor sit amet consectetur. Tortor tempus cursus leo dictumst elementum. Sagittis elit turpis dignissim turpis tristique venenatis. Tempor id commodo odio nunc id volutpat libero. Ut hendrerit malesuada netus sapien dictum sapien nibh. Cras laoreet risus mus mi commodo volutpat quis neque. Scelerisque at in in id donec ornare velit. Posuere amet lobortis volutpat purus mauris. Tortor magna non turpis ultricies iaculis rhoncus. Volutpat lectus proin pellentesque platea.”
+            </p>
+            <p>
+              <b>Tyrese Gibson</b>
+              <span>Customer</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
   <section class="agricult">
     <div class="agrocult-bg">
       <div class="agricult-left"></div>
@@ -163,11 +259,11 @@
           <ul>
             <li>
               <h4>Our Agriculture Growth</h4>
-              <p>Lorem ipsum dolor sit amet consectetur. Cursus purus at tempus arcu. Metus elit auctor</p>
+              <p>Lorem ipsum dolor sit amet consectetur. Cursus purus at tempus arcu. <br> Metus elit auctor</p>
             </li>
             <li>
               <h4>Making Healthy Foods</h4>
-              <p>Lorem ipsum dolor sit amet consectetur. Cursus purus at tempus arcu. Metus elit auctor interdum scelerisque</p>
+              <p>Lorem ipsum dolor sit amet consectetur. Cursus purus at tempus arcu. <br> Metus elit auctor interdum scelerisque</p>
             </li>
           </ul>
       </div>
