--- a/index.html
+++ b/index.html
@@ -269,6 +269,35 @@
       </div>
     </div>
   </section>
+  <section class="contact">
+    <div class="container container-bar">
+    <div class="left__bar">
+      <h2>CONTACT NOW</h2>
+      <h3>GET IN TOUCH NOW</h3>
+      <p>Lorem ipsum dolor sit amet, adipiscing elit. In hac habitasse platea dictumst. Duis porta,quam ut finibus ultrices.</p>
+      <div class="phone">
+      <span>PHONE</span><br>
+      <a href="">+880123456789</a><br>
+      <a href="">+880987654321</a><br>
+    </div>
+    <div class="email">
+      <span>EMAIL</span><br>
+      <a href="">needhelp@company.com</a><br>
+    </div>
+    <div class="adress">  
+    <span>ADDRESS</span><br>
+      <a href="">Road No. 8, Niketan, Dhaka, Bangladesh</a><br>
+    </div>
+    </div>
+    <form class="contact__form">
+      <input type="text" name="firstName" placeholder="Your Name"><br>
+      <input type="text" name="phone" placeholder="Phone Number"><br>
+      <input type="text" name="email" placeholder="Your Email"><br>
+      <textarea name="message" placeholder="Your Message"></textarea><br>
+      <button class="u-btn">SEND MESSAGE</button><br>
+    </form>
+  </div>
+  </section>
     </div>
 </body>
 </html>
